# youtube-rag-qna

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
data/chroma/: chroma.sqlite3
data/chunks/: 8idr1WZ1A7Q_chunks.json
data/transcripts/: 8idr1WZ1A7Q.json
src/: app.py  chunker.py  embedder.py  main.py  retriever.py  transcript.py
