[project]
name = "yt-qna-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "python-dotenv>=1.2.2",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
]
